--- a/ClinicManager.API/ClinicManager.API.csproj
+++ b/ClinicManager.API/ClinicManager.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClinicManager.Infrastructure\ClinicManager.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
