--- a/ClinicManager.API/appsettings.json
+++ b/ClinicManager.API/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LocalHost;Port=5432;Database=<Your_Database>;Username=teste;Password=123456"
+    },
+    "AllowedHosts": "*"
 }
