--- a/ClinicManager.API/appsettings.json
+++ b/ClinicManager.API/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LocalHost;Port=5432;Database=<Your_Database>;Username=teste;Password=123456"
+        "DefaultConnection": "Server=LocalHost;Port=5432;Database=ClinicManager;Username=postgres;Password=1234"
     },
     "AllowedHosts": "*"
 }
