--- a/ClinicManager.API/ClinicManager.API.csproj
+++ b/ClinicManager.API/ClinicManager.API.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClinicManager.Application\ClinicManager.Application.csproj" />
     <ProjectReference Include="..\ClinicManager.Infrastructure\ClinicManager.Infrastructure.csproj" />
   </ItemGroup>
 
