--- a/ClinicManager.API/appsettings.json
+++ b/ClinicManager.API/appsettings.json
@@ -8,5 +8,10 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=LocalHost;Port=5432;Database=ClinicManager;Username=postgres;Password=1234"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Key": "Minha Senha Secreta Para Proteger Meus Tokens!",
+        "Issuer": "ClinicManager",
+        "Audience": "ClinicManagers"
+    }
 }
